# ngramSQL

./: LICENSE  README.md  main.py  pyproject.toml
core/: application.py  mainframe.py  plugin.py  types.py  util.py
plugins/demo/: __init__.py  plugin.py
plugins/google_books/: __init__.py  fileio.py  plugin.py
plugins/ngram_lists/: __init__.py  plugin.py
plugins/wordnet/: __init__.py  plugin.py
resources/: bible.ngram  econ.ngram
